# 1_lab

./: .gitignore  Bank.cpp  Bank.h  CMakeLists.txt  Company.cpp  Company.h  Employee.cpp  Employee.h  FullTimeEmployee.cpp  FullTimeEmployee.h  Human.cpp  Human.h  Interface.cpp  Interface.h  PartTimeEmployee.cpp  PartTimeEmployee.h  Payout.cpp  Payout.h  main.cpp
